Fix ktlint on newever Java versions