@@ -258,6 +258,7 @@ task ktlintFormat(type: JavaExec, group: "formatting") {
     main = "com.pinterest.ktlint.Main"
     args "-F", "$project.rootDir/**/src/main/**/*.kt"
     args "--android"
+    jvmArgs "--add-opens=java.base/java.lang=ALL-UNNAMED"
 }
 
 task runTest(type: GradleBuild) {
